<resources>
    <string name="app_name">MyApp1</string>
    <string name="btn1">BOTON 1</string>
    <string name="btn2">BOTON 2</string>
    <string name="titulo1">Nombre de la Aplicación</string>

    //Login
    <string name="login">INICIAR SESIÓN</string>
    <string name="edit_email">INGRESAR CORREO</string>
    <string name="edit_pass">INGRESAR CONTRASEÑA</string>
    <string name="btn_login">INGRESAR</string>
    <string name="btn_email">CONTINUAR CON GOOGLE</string>
    <string name="btn_cuenta">CREAR CUENTA</string>
    <string name="r_pass">RECUPERAR CONTRASEÑA</string>

    //Crear Cuenta
    <string name="crear_cuenta">CREAR CUENTA</string>
    <string name="edit_name">NOMBRES</string>
    <string name="edit_last_name">APELLIDOS</string>
    <string name="edit_cel">CELULAR</string>
    <string name="edit_correo">CORREO</string>
    <string name="edit_pass_create">CONTRASEÑA</string>
    <string name="btn_create">REGISTRARSE</string>
    <string name="btn_login_create">LOGIN</string>

    //Recuperar Contraseña
    <string name="re_pass">RECUPERAR CONTRASEÑA</string>
    <string name="btn_re">RECUPERAR</string>

</resources>